# teszt_wsl

./: CMakeLists.txt  README.md  package.xml
launch/: draw.launch.py  launch_example1.launch.py
src/: diamond.draw.cpp
